--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+# minify css
+sass:
+  style: compressed
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
